# pybatchrender

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  puhti-submit.yml
clawding/: ENV_SETUP.md
clawding/tests/: README.md  benchmark_all_envs.py  benchmark_one_env.py  compare_frames.py  generate_reference_frames.py  generate_reference_frames_one_env.py  submit_slurm_benchmark.py
examples/notebooks/: cartpole_benchmark.ipynb
examples/scripts/: atari_envs_smoke.py  cartpole_benchmark.py  pacman_demo.py
examples/standalone/: cartpole_step_by_step.py
outputs/atari_gifs/: benchmark_note.md
p3d-gym/: config.py  demo_cartpole.py  demo_cartpole_with_logic.py  demo_many_cubes.py  env.py
p3d-gym/renderer/: camera.py  frame_grabber.py  node.py  renderer.py
p3d_gym/: __init__.py  config.py  demo_cartpole.py  demo_cartpole_with_logic.py  demo_many_cubes.py
p3d_gym/renderer/: camera.py  frame_grabber.py  light.py  node.py  renderer.py  shader_context.py
p3d_gym/shaders/: basic.frag  basic.vert
pybatchrender/: __init__.py  demo_cartpole_with_logic.py  env.py
pybatchrender/envs/: __init__.py  atari_style.py
pybatchrender/envs/_template/: __init__.py  config.py  env.py  renderer.py
pybatchrender/envs/asteroids/: __init__.py  config.py  env.py  renderer.py
pybatchrender/envs/breakout/: __init__.py  config.py  env.py  renderer.py
pybatchrender/envs/cartpole/: __init__.py  config.py  env.py  renderer.py
pybatchrender/envs/freeway/: __init__.py  config.py  env.py  renderer.py
pybatchrender/envs/pacman/: __init__.py  config.py  env.py  layout.py  renderer.py
pybatchrender/envs/pingpong/: __init__.py  config.py  env.py  renderer.py
pybatchrender/envs/spaceinvaders/: __init__.py  config.py  env.py  renderer.py
pybatchrender/envs/steering/: __init__.py  config.py  env.py  renderer.py
pybatchrender/models/: cone.egg  plane.egg
pybatchrender/models/cylinder/: license.txt  scene.gltf
pybatchrender/renderer/: light.py  node.py  renderer.py
pybatchrender/shaders/: basic.frag
scripts/: puhti_nightly.sh  submit_puhti_gpu_tests.sh
tests/: test_atari_envs.py  test_atari_render_style.py
